tests/ui/const-generics/intrinsics-type_name-as-const-argument.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/intrinsics-type_name-as-const-argument.rs:14:44
   |
LL |     T: Trait<{std::intrinsics::type_name::<T>()}>
   |                                            ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to previous error

